[package]
name = "naga_oil"
version = "0.4.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "a crate for combining and manipulating shaders using naga IR"
repository = "https://github.com/robtfm/naga_oil/"
readme = "README.md"

[features]
prune = ["dep:serde", "dep:serde_json", "naga/deserialize", "naga/serialize"]
override_any = []

[dependencies]
naga = { version = "0.10", features = ["wgsl-in", "wgsl-out", "glsl-in", "glsl-out", "clone"] }
tracing = "0.1"
regex = "1.5"
regex-syntax = "0.6"
thiserror = "1.0"
codespan-reporting = "0.11"
data-encoding = "2.3.2"
bit-set = "0.5"
rustc-hash = "1.1.0"

# required for prune only
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
wgpu = { version = "0.14", features=["naga"] }
futures-lite = "1"
tracing-subscriber = { version = "0.3", features = ["std", "fmt"] }