[package]
name = "naga_oil"
version = "0.8.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "a crate for combining and manipulating shaders using naga IR"
repository = "https://github.com/bevyengine/naga_oil/"
readme = "README.md"

[features]
default = ["test_shader"]
# enable tests that need a graphical card
test_shader = []
prune = []
override_any = []

[dependencies]
naga = { version = "0.12", features = ["wgsl-in", "wgsl-out", "glsl-in", "glsl-out", "clone", "span"] }
tracing = "0.1"
regex = "1.5"
regex-syntax = "0.6"
thiserror = "1.0"
codespan-reporting = "0.11"
data-encoding = "2.3.2"
bit-set = "0.5"
rustc-hash = "1.1.0"
unicode-ident = "1"
once_cell = "1.17.0"
indexmap = "1.9.3"

[dev-dependencies]
wgpu = { version = "0.16", features=["naga"] }
futures-lite = "1"
tracing-subscriber = { version = "0.3", features = ["std", "fmt"] }
