[package]
name = "benches"
edition = "2021"
description = "Benchmarks that test Bevy's performance"
publish = false
license = "MIT OR Apache-2.0"
# Do not automatically discover benchmarks, we specify them manually instead.
autobenches = false

[dev-dependencies]
glam = "0.29"
rand = "0.8"
rand_chacha = "0.3"
criterion = { version = "0.3", features = ["html_reports"] }
bevy_app = { path = "../crates/bevy_app" }
bevy_ecs = { path = "../crates/bevy_ecs", features = ["multi_threaded"] }
bevy_hierarchy = { path = "../crates/bevy_hierarchy" }
bevy_math = { path = "../crates/bevy_math" }
bevy_picking = { path = "../crates/bevy_picking", features = [
  "bevy_mesh_picking_backend",
] }
bevy_reflect = { path = "../crates/bevy_reflect", features = ["functions"] }
bevy_render = { path = "../crates/bevy_render" }
bevy_tasks = { path = "../crates/bevy_tasks" }
bevy_utils = { path = "../crates/bevy_utils" }

# make bevy_render compile on linux. x11 vs wayland does not matter here as the benches do not actually use a window
[target.'cfg(target_os = "linux")'.dev-dependencies]
bevy_winit = { path = "../crates/bevy_winit", features = ["x11"] }

[profile.release]
opt-level = 3
lto = true

[[bench]]
name = "ecs"
path = "benches/bevy_ecs/main.rs"
harness = false

[[bench]]
name = "math"
path = "benches/bevy_math/main.rs"
harness = false

[[bench]]
name = "picking"
path = "benches/bevy_picking/main.rs"
harness = false

[[bench]]
name = "reflect"
path = "benches/bevy_reflect/main.rs"
harness = false

[[bench]]
name = "render"
path = "benches/bevy_render/main.rs"
harness = false

[[bench]]
name = "tasks"
path = "benches/bevy_tasks/main.rs"
harness = false
