[package]
name = "bevy_diagnostic"
version = "0.1.0"
authors = ["Carter Anderson <mcanders1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_app = { path = "../bevy_app" }
bevy_core = { path = "../bevy_core" }
legion = { path = "../bevy_legion" }
uuid = { version = "0.8", features = ["v4", "serde"] }
