[package]
name = "bevy_gizmos_experimental"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_color = { version = "0.17.0-dev", path = "../crates/bevy_color" }
bevy_ecs = { version = "0.17.0-dev", path = "../crates/bevy_ecs" }
bevy_math = { version = "0.17.0-dev", path = "../crates/bevy_math" }

[lints]
workspace = true
