[package]
name = "bevy_transform"
version = "0.3.0"
authors = ["Alec Thilenius <alec@thilenius.com>"]
edition = "2018"

license = "MIT"

[dependencies]
legion = { path = "../bevy_legion", features = ["serialize"]}
glam = "0.8.6"
log = "0.4"
rayon = "1.2"
serde = { version = "1", features = ["derive"] }
smallvec = "0.6"
shrinkwraprs = "0.2"

[dev-dependencies]
env_logger = "0.7"
