[package]
name = "bevy_wgpu"
version = "0.1.0"
authors = ["Carter Anderson <mcanders1@gmail.com>"]
edition = "2018"

[features]
default = ["bevy_winit"]

[dependencies]
# bevy
bevy_app = { path = "../bevy_app", version = "0.1.0" }
bevy_asset = { path = "../bevy_asset", version = "0.1.0" }
bevy_core = { path = "../bevy_core", version = "0.1.0" }
bevy_render = { path = "../bevy_render", version = "0.1.0" }
bevy_window = { path = "../bevy_window", version = "0.1.0" }
bevy_winit = { path = "../bevy_winit", version = "0.1.0", optional = true }
legion = { path = "../bevy_legion" }

# render
# wgpu = { git = "https://github.com/gfx-rs/wgpu-rs.git", rev = "d08f83762426c2c42eda74c7ca9c43d8d950fc0a" }
wgpu = { version = "0.5.0" }

futures = "0.3"
log = { version = "0.4", features = ["release_max_level_info"] }