[package]
name = "errors"
version = "0.1.0"
edition = "2021"
description = "Bevy's error codes"
publish = false
license = "MIT OR Apache-2.0"


[dependencies]
bevy = { path = ".." }

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--cfg", "docsrs"]
all-features = true
