[package]
name = "errors"
edition = "2021"
description = "Documentation and tests for Bevy's error codes"
publish = false
license = "MIT OR Apache-2.0"

[dependencies]
bevy = { path = ".." }

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--cfg", "docsrs"]
all-features = true
