[package]
name = "integration_tests"
version = "0.1.0"
edition = "2021"
description = """Contains bevy's integration tests.
Is separate from the main bevy crate, so it doesn't impact the compilation time of examples."""
publish = false
license = "MIT OR Apache-2.0"

[dev-dependencies]
bevy = { path = ".." }
postcard = { version = "1.0", features = ["alloc"] }
bincode = "1.3"
rmp-serde = "1.1"
ron = "0.8.0"
serde = { version = "1", features = ["derive"] }