[package]
name = "bevy_a11y"
version = "0.15.3"
edition = "2021"
description = "Provides accessibility support for Bevy Engine"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "accessibility", "a11y"]

[dependencies]
# bevy
bevy_app = { path = "../bevy_app", version = "0.15.3" }
bevy_derive = { path = "../bevy_derive", version = "0.15.3" }
bevy_ecs = { path = "../bevy_ecs", version = "0.15.3" }
bevy_reflect = { path = "../bevy_reflect", version = "0.15.3" }

accesskit = "0.17"

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true
