[package]
name = "bevy_android"
version = "0.17.0-dev"
edition = "2024"
description = "Provides android functionality for Bevy Engine."
homepage = "https://bevy.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]

[target.'cfg(target_os = "android")'.dependencies]
android-activity = "0.6"

[features]
default = []

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true
