[package]
name = "bevy_animation"
version = "0.16.0-dev"
edition = "2021"
description = "Provides animation functionality for Bevy Engine"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]

[dependencies]
# bevy
bevy_app = { workspace = true }
bevy_asset = { workspace = true }
bevy_color = { workspace = true }
bevy_derive = { workspace = true }
bevy_log = { workspace = true }
bevy_math = { workspace = true }
bevy_reflect = { workspace = true, features = [
  "bevy",
  "petgraph",
] }
bevy_render = { workspace = true }
bevy_time = { workspace = true }
bevy_utils = { workspace = true }
bevy_ecs = { workspace = true }
bevy_transform = { workspace = true }

# other
petgraph = { version = "0.6", features = ["serde-1"] }
ron = "0.8"
serde = "1"
blake3 = { version = "1.0" }
downcast-rs = { version = "2", default-features = false, features = ["std"] }
thiserror = { version = "2", default-features = false }
derive_more = { version = "1", default-features = false, features = ["from"] }
either = "1.13"
thread_local = "1"
uuid = { version = "1.7", features = ["v4"] }
smallvec = "1"
tracing = { version = "0.1", default-features = false, features = ["std"] }

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true
