[package]
name = "bevy_animation"
version = "0.16.0"
edition = "2024"
description = "Provides animation functionality for Bevy Engine"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]

[dependencies]
# bevy
bevy_app = { path = "../bevy_app", version = "0.16.0" }
bevy_asset = { path = "../bevy_asset", version = "0.16.0" }
bevy_color = { path = "../bevy_color", version = "0.16.0" }
bevy_derive = { path = "../bevy_derive", version = "0.16.0" }
bevy_log = { path = "../bevy_log", version = "0.16.0" }
bevy_math = { path = "../bevy_math", version = "0.16.0" }
bevy_mesh = { path = "../bevy_mesh", version = "0.16.0" }
bevy_reflect = { path = "../bevy_reflect", version = "0.16.0", features = [
  "petgraph",
] }
bevy_render = { path = "../bevy_render", version = "0.16.0" }
bevy_time = { path = "../bevy_time", version = "0.16.0" }
bevy_utils = { path = "../bevy_utils", version = "0.16.0" }
bevy_ecs = { path = "../bevy_ecs", version = "0.16.0" }
bevy_transform = { path = "../bevy_transform", version = "0.16.0" }
bevy_platform = { path = "../bevy_platform", version = "0.16.0", default-features = false, features = [
  "std",
  "serialize",
] }

# other
petgraph = { version = "0.7", features = ["serde-1"] }
ron = "0.8"
serde = "1"
blake3 = { version = "1.0" }
downcast-rs = { version = "2", default-features = false, features = ["std"] }
thiserror = { version = "2", default-features = false }
derive_more = { version = "1", default-features = false, features = ["from"] }
either = "1.13"
thread_local = "1"
uuid = { version = "1.13.1", features = ["v4"] }
smallvec = "1"
tracing = { version = "0.1", default-features = false, features = ["std"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# TODO: Assuming all wasm builds are for the browser. Require `no_std` support to break assumption.
uuid = { version = "1.13.1", default-features = false, features = ["js"] }

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true
